--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,44 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@inproceedings{zhuang2017crime,
+  title={Crime hot spot forecasting: A recurrent model with spatial and temporal information},
+  author={Zhuang, Yong and Almeida, Matthew and Morabito, Melissa and Ding, Wei},
+  booktitle={2017 IEEE International Conference on Big Knowledge (ICBK)},
+  pages={143--150},
+  year={2017},
+  organization={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{zhuang2016evaluation,
+  title={An evaluation of big data analytics in feature selection for long-lead extreme floods forecasting},
+  author={Zhuang, Yong and Yu, Kui and Wang, Dawei and Ding, Wei},
+  booktitle={2016 IEEE 13th International Conference on Networking, Sensing, and Control (ICNSC)},
+  pages={1--6},
+  year={2016},
+  organization={IEEE}
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{zhuang2016long,
+  title={Long-lead prediction of extreme precipitation cluster via a spatiotemporal convolutional neural network},
+  author={Zhuang, Yong and Ding, Wei},
+  booktitle={Proceedings of the 6th International Workshop on Climate Informatics: CI},
+  year={2016}
 }
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{zhuang2018galaxy,
+  title={Galaxy: Towards Scalable and Interpretable Explanation on High-Dimensional and Spatio-Temporal Correlated Climate Data},
+  author={Zhuang, Yong and Small, David L and Shu, Xin and Yu, Kui and Islam, Shafiqul and Ding, Wei},
+  booktitle={2018 IEEE International Conference on Big Knowledge (ICBK)},
+  pages={146--153},
+  year={2018},
+  organization={IEEE}
 }
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{almeida2021mitigating,
+  title={Mitigating class-boundary label uncertainty to reduce both model bias and variance},
+  author={Almeida, Matthew and Zhuang, Yong and Ding, Wei and Crouter, Scott E and Chen, Ping},
+  journal={ACM Transactions on Knowledge Discovery from Data (TKDD)},
+  volume={15},
+  number={2},
+  pages={1--18},
+  year={2021},
+  publisher={ACM New York, NY, USA}
 }
