--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   pages={143--150},
   year={2017},
   organization={IEEE}
+  abbr={ICBK}
 }
 
 @inproceedings{zhuang2016evaluation,
@@ -17,12 +18,14 @@
   pages={1--6},
   year={2016},
   organization={IEEE}
+  abbr={ICNSC}
 }
 @inproceedings{zhuang2016long,
   title={Long-lead prediction of extreme precipitation cluster via a spatiotemporal convolutional neural network},
   author={Zhuang, Yong and Ding, Wei},
   booktitle={Proceedings of the 6th International Workshop on Climate Informatics: CI},
   year={2016}
+  abbr={CI}
 }
 @inproceedings{zhuang2018galaxy,
   title={Galaxy: Towards Scalable and Interpretable Explanation on High-Dimensional and Spatio-Temporal Correlated Climate Data},
@@ -31,6 +34,7 @@
   pages={146--153},
   year={2018},
   organization={IEEE}
+  abbr={ICBK}
 }
 @article{almeida2021mitigating,
   title={Mitigating class-boundary label uncertainty to reduce both model bias and variance},
@@ -41,4 +45,5 @@
   pages={1--18},
   year={2021},
   publisher={ACM New York, NY, USA}
+  abbr={TKDD}
 }
