teaching, projects update

--- a/_tech-writing/2021-09-17.md
+++ b/_tech-writing/2021-09-17.md
@@ -3,7 +3,7 @@ layout: page
 title: 2021-09-17
 ---
 - Science is often hard to read. Most people assume that its difficulties are born out of necessity, out of the extreme complexity of scientific concepts, data and analysis. We argue here that complexity of thought need not lead to impenetrability of expression; we demonstrate a number of rhetorical principles that can produce clarity in communication without oversimplifying scientific issues. The results are substantive, not merely cosmetic: Improving the quality of writing actually improves the quality of thought. [source](https://www.americanscientist.org/blog/the-long-view/the-science-of-scientific-writing) 
-- In contrast, humans learn to perform the same task by reading a description, after which they are able to perform the task in a zero-shot manner—indeed, this is how crowd-sourced NLP datasets are constructed. [source](https://aclanthology.org/2020.emnlp-main.105.pdf) 
+- The dominant paradigm in supervised NLP today is learning from examples, where machine learning algorithms are trained using a large set of taskspecific input-output pairs. In contrast, humans learn to perform the same task by reading a description, after which they are able to perform the task in a zero-shot manner—indeed, this is how crowd-sourced NLP datasets are constructed. [source](https://aclanthology.org/2020.emnlp-main.105.pdf) 
 - The second piece of intuition, which has captured the imagination of machine learning and neuroscience alike, is that deep neural networks can disentangle highly curved manifolds in input space into flattened manifolds in hidden space.
 - Data is playing an especially critical role in enabling computers to interpret images as compositions of objects, an achievement that humans can do effortlessly while it has been elusive for machines so far.
 - We present a functional aspect of our approach, in which we frame the co-optimization of the neural
