--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,10 @@
   booktitle={2017 IEEE International Conference on Big Knowledge (ICBK)},
   pages={143--150},
   year={2017},
-  organization={IEEE}
+  organization={IEEE},
+  pdf = {zhuang2017crime/paper.pdf},
+  poster = {zhuang2017crime/poster.pdf},
+  slides = {zhuang2017crime/slides.pdf},
 }
 
 @inproceedings{zhuang2016evaluation,
@@ -18,7 +21,9 @@
   booktitle={2016 IEEE 13th International Conference on Networking, Sensing, and Control (ICNSC)},
   pages={1--6},
   year={2016},
-  organization={IEEE}
+  organization={IEEE},
+  pdf = {zhuang2016evaluation/paper.pdf},
+  slides = {zhuang2016evaluation/slides.pdf},
 }
 @inproceedings{zhuang2016long,
   abbr={CI},
@@ -34,9 +39,11 @@
   booktitle={2018 IEEE International Conference on Big Knowledge (ICBK)},
   pages={146--153},
   year={2018},
-  organization={IEEE}
+  organization={IEEE},
+  pdf = {zhuang2018galaxy/paper.pdf},
+  slides = {zhuang2018galaxy/slides.pdf},  
 }
-@article{almeida2021mitigating,
+@article{zhuang2021mitigating,
   abbr={TKDD},
   title={Mitigating class-boundary label uncertainty to reduce both model bias and variance},
   author={Almeida, Matthew and Zhuang, Yong and Ding, Wei and Crouter, Scott E and Chen, Ping},
@@ -45,5 +52,6 @@
   number={2},
   pages={1--18},
   year={2021},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  pdf = {zhuang2021mitigating/paper.pdf},
 }
