--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @inproceedings{zhuang2017crime,
+  bibtex_show={true},
   abbr={ICBK},
   title={Crime hot spot forecasting: A recurrent model with spatial and temporal information},
   author={Zhuang, Yong and Almeida, Matthew and Morabito, Melissa and Ding, Wei},
@@ -12,9 +13,14 @@
   pdf = {zhuang2017crime/paper.pdf},
   poster = {zhuang2017crime/poster.pdf},
   slides = {zhuang2017crime/slides.pdf},
+  abstract = {Crime is a major social problem in the United States, threatening public safety and disrupting the economy. Understanding patterns in criminal activity allows for the prediction of future high-risk crime "hot spots" and enables police precincts to more effectively allocate officers to prevent or respond to incidents. With the ever-increasing ability of states and organizations to collect and store detailed data tracking crime occurrence, a significant amount of data with spatial and temporal information has been collected. How to use the benefit of massive spatial-temporal information to precisely predict the regional crime rates becomes necessary. 
+  
+  The recurrent neural network model has been widely proven effective for detecting the temporal patterns in a time series. In this study, we propose the Spatio-Temporal neural network (STNN) to precisely forecast crime hot spots with embedding spatial information. We evaluate the model using call-for-service data provided by the Portland, Oregon Police Bureau (PPB) for a 5-year period from March 2012 through the end of December 2016. We show that our STNN model outperforms a number of classical machine learning approaches and some alternative neural network architectures.},
+
 }
 
 @inproceedings{zhuang2016evaluation,
+  bibtex_show={true},
   abbr={ICNSC},
   title={An evaluation of big data analytics in feature selection for long-lead extreme floods forecasting},
   author={Zhuang, Yong and Yu, Kui and Wang, Dawei and Ding, Wei},
@@ -33,6 +39,7 @@
   year={2016}
 }
 @inproceedings{zhuang2018galaxy,
+  bibtex_show={true},
   abbr={ICBK},
   title={Galaxy: Towards Scalable and Interpretable Explanation on High-Dimensional and Spatio-Temporal Correlated Climate Data},
   author={Zhuang, Yong and Small, David L and Shu, Xin and Yu, Kui and Islam, Shafiqul and Ding, Wei},
@@ -44,6 +51,7 @@
   slides = {zhuang2018galaxy/slides.pdf},  
 }
 @article{zhuang2021mitigating,
+  bibtex_show={true},
   abbr={TKDD},
   title={Mitigating class-boundary label uncertainty to reduce both model bias and variance},
   author={Almeida, Matthew and Zhuang, Yong and Ding, Wei and Crouter, Scott E and Chen, Ping},
