--- a/_teaching/2017-fall.md
+++ b/_teaching/2017-fall.md
@@ -2,7 +2,7 @@
 layout: default
 course_name: Artificial intelligence
 course_number: CS 670
-semester: fall 2017
+semester: 2017 fall 
 role: Teaching Assistant
 ---
 Graduate-level introduction to artificial intelligence course taught by Prof. [Wei Ding](https://www.cs.umb.edu/~ding). 
