--- a/_tech-writing/2021-10-15.md
+++ b/_tech-writing/2021-10-15.md
@@ -9,21 +9,21 @@ title: 2021-10-15
 
 ## Before & After Task:
 - Tianyu Kang
- - before: We define the generalizability of neural network models as the activation ratio of each inner single unit or feature map. Our experiments benchmark datasets across both classical neural network architectures as well as SOTA algorithms. The experiment results show the quality of skills actually improves the quality of generalization.
+ -- before: We define the generalizability of neural network models as the activation ratio of each inner single unit or feature map. Our experiments benchmark datasets across both classical neural network architectures as well as SOTA algorithms. The experiment results show the quality of skills actually improves the quality of generalization.
 
- - after: We argue here that the generalizability of neural network models can be deconstructed by the activation ratio of each inner single unit or feature map; Besides the theoretical guarantees, we demonstrate a number of empirical validations on the proposed algorithm on benchmark datasets across both classical neural network architectures as well as SOTA algorithms. The results are meaningful, not merely inessential: Improving the quality of skills actually improves the quality of generalization.
+ -- after: We argue here that the generalizability of neural network models can be deconstructed by the activation ratio of each inner single unit or feature map; Besides the theoretical guarantees, we demonstrate a number of empirical validations on the proposed algorithm on benchmark datasets across both classical neural network architectures as well as SOTA algorithms. The results are meaningful, not merely inessential: Improving the quality of skills actually improves the quality of generalization.
 
 - Zihan Li
- - before: (Identifying the internal relationships in the data is the basis of data analysis and prediction.) Traditional statistics methods focus on testing the correlation of variables pairwise. However, the correlation has rather limited performance on real causal influence.
+ -- before: (Identifying the internal relationships in the data is the basis of data analysis and prediction.) Traditional statistics methods focus on testing the correlation of variables pairwise. However, the correlation has rather limited performance on real causal influence.
 
- - after: We argue that the traditional statistics methods having limited contribution to exploring the internal causal relationships between variables, and in fact may mislead researchers as they focus on testing the correlation of variables pairwise rather than performing as well as possible on cause and effect.
+ -- after: We argue that the traditional statistics methods having limited contribution to exploring the internal causal relationships between variables, and in fact may mislead researchers as they focus on testing the correlation of variables pairwise rather than performing as well as possible on cause and effect.
 
 - Yong Zhuang
- - before: Although existing machine learning methods have been successful in many fields, such as climate change, finance, and disease control, the underline physical laws of these phenomena are still complex and hard to learn.
+ -- before: Although existing machine learning methods have been successful in many fields, such as climate change, finance, and disease control, the underline physical laws of these phenomena are still complex and hard to learn.
 
- - after: Although machine learning has become more critical to efforts in science in engineering, such as understanding the neural basis of cognition, extracting and predicting coherent changes in the climate, stabilizing financial markets, managing the spread of disease, and controlling turbulence, where data are abundant, physical laws remain elusive.
+ -- after: Although machine learning has become more critical to efforts in science in engineering, such as understanding the neural basis of cognition, extracting and predicting coherent changes in the climate, stabilizing financial markets, managing the spread of disease, and controlling turbulence, where data are abundant, physical laws remain elusive.
 
 - Chengjie Zheng
- - before: In this paper,  we propose an approach for behavior recognition modeling and detection of certain types of anomalous behavior.
+ -- before: In this paper,  we propose an approach for behavior recognition modeling and detection of certain types of anomalous behavior.
 
- - after: We present a conceptually simple, lightweight, and general framework for behavior recognition in video
+ -- after: We present a conceptually simple, lightweight, and general framework for behavior recognition in video
