--- a/_tech-writing/2021-09-09.md
+++ b/_tech-writing/2021-09-09.md
@@ -2,10 +2,10 @@
 layout: page
 title: 2021-09-09
 ---
-- In this paper, we argue that analyzing fine-tuning through the lens of intrinsic dimension provides us with empirical and theoretical intuitions to explain this remarkable phenomenon.
-- "Ability to forget pain and suffering is vital to being resilient" - Jensen Huang
-- Since nearby orbits correspond to nearly identical states, exponential orbital divergence means that systems whose initial differences we may not be able to resolve will soon behave quite differently- predictive ability is rapidly lost.
-- Colleges and universities must balance many goals, and research universities in particular aspire to excellence in both teaching and research. University administrators and policymakers alike are interested in ensuring that publicly-supported private and public universities operate at high levels of instructional and scholarly quality, but to date we know little about whether scholarly excellence comes at a cost in terms of teaching quality, or vice versa.
-- We believe that ConViT — and more generally, the idea of imposing soft inductive biases that models can learn to ignore — is an important step forward in building more flexible AI systems that can perform well with whatever data they are provided.
-- The remarkable and accelerating progress in neuroscience, both experimental and theoretical-computational, does not seem to bring us closer to an answer: The gap is formidable, and seems to necessitate the development of new conceptual frameworks.
+- **Hefei Qiu:** In this paper, we argue that analyzing fine-tuning **through the lens of intrinsic dimension provides us** with empirical and theoretical intuitions to explain this remarkable phenomenon.
+- **Olga Andreeva:** "**Ability to** forget pain and suffering **is vital to** being resilient" - Jensen Huang
+- **Yong Zhuang:** Since nearby orbits correspond to nearly identical states, **exponential orbital divergence means that systems whose initial differences we may not be able to resolve will soon behave quite differently- predictive ability is rapidly lost**.
+- **Wei Ding:** Colleges and universities must balance many goals, and research universities in particular **aspire to** excellence in both teaching and research. University administrators and policymakers **alike** are interested in ensuring that publicly-supported private and public universities operate at high levels of **instructional and scholarly quality**, but to date **we know little about** whether scholarly excellence **comes at a cost in terms of** teaching quality, or vice versa.
+- **Chengjie Zheng:** We believe that ConViT — and more generally, the idea of imposing soft inductive biases that models can learn to ignore — **is an important step forward in** building more flexible AI systems that can perform well with whatever data they are provided.
+- **Tianyu Kang:** The remarkable and accelerating progress in neuroscience, both experimental and theoretical-computational, **does not seem to bring us closer to an answer:** The gap is formidable, and seems to necessitate the development of new conceptual frameworks.
 
