--- a/_tech-writing/2021-09-24.md
+++ b/_tech-writing/2021-09-24.md
@@ -2,10 +2,10 @@
 layout: page
 title: 2021-09-24
 ---
-- The most direct link between chaos theory and the real world is the analysis of time series from real systems in terms of nonlinear dynamics.
-- A-LTM, developed independently, is nearly identical in method but has very different experiments and conclusions.[source](https://arxiv.org/pdf/1606.09282.pdf)
-- The information that begins a sentence establishes for the reader a perspective for viewing the sentence as a unit: Readers expect a unit of discourse to be a story about whoever shows up first. "Bees disperse pollen" and "Pollen is dispersed by bees" are two different but equally respectable sentences about the same facts. The first tells us something about bees; the second tells us something about pollen. The passivity of the second sentence does not by itself impair its quality; in fact, "Pollen is dispersed by bees" is the superior sentence if it appears in a paragraph that intends to tell us a continuing story about pollen. Pollen's story at that moment is a passive one.[source](https://www.americanscientist.org/blog/the-long-view/the-science-of-scientific-writing)
-- The space of mathematical expressions is discrete (in model structure) and continuous (in model parameters), growing exponentially with the length of the expression, rendering symbolic regression a challenging machine learning problem—thought to be NP-hard.[source](https://arxiv.org/abs/1912.04871)
-- Our approach is influenced by recent works that use self-attention for image classification, either in combination with the convolution operator or even as a full replacement for it.[source](https://arxiv.org/pdf/2102.05095.pdf)
-- At the neurophysiology level, it has been shown that the early response of neurons in intermediate and higher visual areas contains enough information for decoding image category almost readily from the onset of the visual response both during passive and active presentations.[source](http://klab.tch.harvard.edu/publications/PDFs/gk7812.pdf)
+- **Yong Zhuang:** The most **direct link between** chaos theory and the real world is the analysis of time series from real systems **in terms of** nonlinear dynamics.
+- **Hefei Qiu:** A-LTM, developed independently, is nearly identical in method but has very different experiments and conclusions.[source](https://arxiv.org/pdf/1606.09282.pdf)
+- **Wei Ding:** The information that begins a sentence establishes for the reader a perspective for viewing the sentence as a unit: Readers expect a unit of discourse to be a story about whoever shows up first. "Bees disperse pollen" and "Pollen is dispersed by bees" are two different but equally respectable sentences about the same facts. The first tells us something about bees; the second tells us something about pollen. The passivity of the second sentence does not by itself impair its quality; in fact, "Pollen is dispersed by bees" is the superior sentence if it appears in a paragraph that intends to tell us a continuing story about pollen. Pollen's story at that moment is a passive one.[source](https://www.americanscientist.org/blog/the-long-view/the-science-of-scientific-writing)
+- **Zihan Li:** The space of mathematical expressions is **discrete (in model structure) and continuous (in model parameters)**, growing exponentially with the length of the expression, **rendering** symbolic regression a challenging machine learning problem—**thought to be NP-hard**.[source](https://arxiv.org/abs/1912.04871)
+- **Chengjie Zheng:** Our approach is influenced by recent works that use self-attention for image classification, either in combination with the convolution operator or even as a full replacement for it.[source](https://arxiv.org/pdf/2102.05095.pdf)
+- **Tianyu Kang:** At the neurophysiology level, it has been shown that the early response of neurons in intermediate and higher visual areas contains enough information for decoding image category almost readily from the onset of the visual response both during passive and active presentations.[source](http://klab.tch.harvard.edu/publications/PDFs/gk7812.pdf)
 
