--- a/_tech-writing/2021-10-15.md
+++ b/_tech-writing/2021-10-15.md
@@ -4,7 +4,7 @@ title: 2021-10-15
 ---
 #### **Example Sentences**:
 - **Hefei Qiu:** One difficulty that arises with such an experimental setup is being able to construct a large enough word vocabulary to encode arbitrary sentences. For example, a sentence from a Wikipedia article might contain nouns that are highly unlikely to appear in our book vocabulary. We solve this problem by learning a mapping that transfers word representations from one model to another.[source](https://arxiv.org/pdf/1506.06726.pdf)
-- **Yong Zhuang:** Humans and other animals have a remarkable ability to take in data from many sources, integrate it seamlessly, and deploy it flexibly in the service of a range of goals. Yet most machine learning research focuses on building bespoke systems to handle the stereotyped set of inputs and outputs associated with a single task.[source](https://arxiv.org/pdf/2107.14795.pdf)
+- **Yong Zhuang:** Humans and other animals have a **remarkable** ability to take in data from many sources, **integrate** it seamlessly, and deploy it flexibly in the service of a range of goals. **Yet most** machine learning research focuses on building bespoke systems to handle the stereotyped set of inputs and outputs associated with a single task.[source](https://arxiv.org/pdf/2107.14795.pdf)
 - **Wei Ding:** This interplay between substance and structure can be demonstrated by something as basic as a simple table. Let us say that in tracking the temperature of a liquid over a period of time, an investigator takes measurements every three minutes and records a list of temperatures. Those data could be presented by a number of written structures.[source](https://www.americanscientist.org/blog/the-long-view/the-science-of-scientific-writing)
 
 
