tech-writing updates

--- a/_tech-writing/2021-10-24.md
+++ b/_tech-writing/2021-10-24.md
@@ -2,6 +2,15 @@
 layout: page
 title: 2021-10-29
 ---
+#### **Example Sentences**:
+- **Hefei Qiu:** We propose a method of automatic machine translation evaluation that is quick,
+inexpensive, and language-independent, that correlates highly with human evaluation, and that has little marginal cost per run.
+.[source](https://aclanthology.org/P02-1040.pdf)
+
+- **Zihan Li:** These methods have the stability and reliability of trust-region methods but are much simpler to implement, requiring only few lines of code change to a vanilla policy gradient implementation, applicable in more general settings (for example, when using a joint architecture for the policy and value function), and have better overall performance.[source](https://arxiv.org/pdf/1707.06347.pdf)
+
+- **Wei Ding:** Information is interpreted more easily and more uniformly if it is placed where most readers expect to find it. These needs and expectations of readers affect the interpretation not only of tables and illustrations but also of prose itself. Readers have relatively fixed expectations about where in the structure of prose they will encounter particular items of its substance. If writers can become consciously aware of these locations, they can better control the degrees of recognition and emphasis a reader will give to the various pieces of information being presented. Good writers are intuitively aware of these expectations; that is why their prose has what we call "shape." [source](https://www.americanscientist.org/blog/the-long-view/the-science-of-scientific-writing)
+
 #### **Before & After**:
 - Hefei Qiu
   - **before**: Different from previous methods of using data augmentation to construct positive pairs in contrastive learning, we use semantic similarity or entailment relation of two sentences to build positive pairs.
