--- a/_tech-writing/2021-12-10.md
+++ b/_tech-writing/2021-12-10.md
@@ -31,7 +31,7 @@ title: 2021-12-10
 
   - **after**: While current token-based symbolic methods are well acceptable, easier to implement and interpret, their results could be unreliable and limited for practical applications due to their isolation of the mathematical internal grammar during the progress.
 
-#### **Paper Presentation Example**:
+#### **Paper Presentation Examples**:
 - [KDD 2020 best paper from google research](https://dl.acm.org/doi/10.1145/3394486.3403226)
 - [ICML2021 Outstanding Paper](https://icml.cc/virtual/2021/poster/10175)
 
