--- a/_wins/2021-12-10.md
+++ b/_wins/2021-12-10.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 
+title: WINS Seminar - Dr. Zhi Cao
 date: 2021-12-10
-description: this is what included images could look like
+description: A talk about the job hunting.
 tags: formatting images
 categories: sample-posts
 ---
@@ -16,6 +16,10 @@ categories: sample-posts
 </div>
 <div class="caption">
     A simple, elegant caption looks good between image rows, after each row, or doesn't have to be there at all.
+</div>
+
+<div class="row mt-3">
+    <iframe width="420" height="315" src="https://youtu.be/WhOmFU61LG8" frameborder="0" allowfullscreen></iframe>
 </div>
 
 
