--- a/_wins/2021-12-10.md
+++ b/_wins/2021-12-10.md
@@ -5,6 +5,7 @@ date: 2021-12-10
 description: A talk about the job hunting.
 tags: formatting images
 categories: sample-posts
+youtubeId: umassboston
 ---
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -18,9 +19,12 @@ categories: sample-posts
     A simple, elegant caption looks good between image rows, after each row, or doesn't have to be there at all.
 </div>
 
-<div class="row mt-3">
-    <iframe width="420" height="315" src="https://youtu.be/WhOmFU61LG8" frameborder="0" allowfullscreen></iframe>
-</div>
+Our invited guest is Dr. Zhi Cao, an alumna of UMass Boston. She is going to share her journey to becoming a scientist in a leading Tech company.
+
+Dr. Zhi Cao is a Data & Applied Scientist and Software Engineer at Microsoft. She received her PhD in Computer Science from UMass Boston, where she worked with Prof. Honggang Zhang at Mobile and Pervasive Computing Lab. Her research focuses were Edge Computing and Deep Reinforcement Learning. In her research, she tackled problems related to application placement and resource allocation in mobile Edge Computing.
+
+
+{% include youtubePlayer.html id=page.youtubeId %}
 
 
 
