--- a/_wins/2021-12-10.md
+++ b/_wins/2021-12-10.md
@@ -5,7 +5,7 @@ date: 2021-12-10
 description: A talk about the job hunting.
 tags: formatting images
 categories: sample-posts
-youtubeId: WhOmFU61LG8&t=23s
+youtubeId: lDi9uFcD7XI
 ---
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
