--- a/_tech-writing/2022-01-28.md
+++ b/_tech-writing/2022-01-28.md
@@ -2,6 +2,7 @@
 layout: page
 title: 2022-01-28
 ---
+
 #### **Example Sentences**:
 
 - **Chengjie Zheng:** Despite their enormous success in many applications like social media, traffic analysis, biology, recommendation systems and even computer vision, many of the current GCN models use fairly shallow setting as many of the recent models such as GCN (Kipf & Welling, 2016) achieve their best performance given 2 layers.[source](https://openreview.net/pdf?id=CYO5T-YjWZV)
@@ -14,7 +15,7 @@ title: 2022-01-28
 
 
 #### **Before & After**:
-- Chengjie Zheng
+- Hefei Qiu
   - **before**: In this paper, we extend previous approaches and propose a unified framework, named QUESTEVAL. In contrast to established metrics such as ROUGE or BERTScore, QUESTEVAL does not require any groundtruth reference. Nonetheless, QUESTEVAL substantially improves the correlation with human judgments over four evaluation dimensions (consistency, coherence, fluency, and relevance), as shown in extensive experiments.
   - **after**: In this paper, we extend previous approaches and propose a unified framework, named QuestEval. In contrast to established metrics such as ROUGE or BERTScore, QuestEval does not require any ground truth reference.
 Nonetheless, through extensive experiments on two well-recognized summarization datasets, we show that QuestEval substantially improves the correlation with human judgments over four evaluation dimensions (consistency, coherence, fluency, and relevance).
