--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,3 +63,13 @@
   publisher={ACM New York, NY, USA},
   pdf = {zhuang2021mitigating/paper.pdf},
 }
+
+
+@inproceedings{zhuang2022HF,
+  abbr={ICDM},
+  title={Widening the Time Horizon: Predicting the Long-Term Behavior of Chaotic Systems with Error-Trajectory Tracing and Horizon Forcing},
+  author={Zhuang, Yong and Almeida, Matthew and Ding, Wei and Patrick D Flynn and Shafiqul Islam and Chen, Ping},
+  booktitle={2022 The IEEE International Conference on Data Mining (ICDM)},
+  year={2022},
+  organization={IEEE},
+} 
