--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,7 @@
 }
 @inproceedings{zhuang2016long,
   abbr={CI},
+  bibtex_show={true},
   title={Long-lead prediction of extreme precipitation cluster via a spatiotemporal convolutional neural network},
   author={Zhuang, Yong and Ding, Wei},
   booktitle={Proceedings of the 6th International Workshop on Climate Informatics: CI},
