publication info update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,7 +37,7 @@
   title={Long-lead prediction of extreme precipitation cluster via a spatiotemporal convolutional neural network},
   author={Zhuang, Yong and Ding, Wei},
   booktitle={Proceedings of the 6th International Workshop on Climate Informatics: CI},
-  pdf = {zhuang2018spcnn/paper.pdf},
+  pdf = {zhuang2016stcnn/paper.pdf},
   year={2016}
 }
 @inproceedings{zhuang2018galaxy,
