--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -67,11 +67,15 @@
 }
 
 
-@inproceedings{zhuang2022HF,
+@inproceedings{zhuang2022hf,
+  bibtex_show={true},
   abbr={ICDM},
-  title={Widening the Time Horizon: Predicting the Long-Term Behavior of Chaotic Systems with Error-Trajectory Tracing and Horizon Forcing},
+  title={Widening the Time Horizon: Predicting the Long-Term Behavior of Chaotic Systems},
   author={Zhuang, Yong and Almeida, Matthew and Ding, Wei and Patrick D Flynn and Shafiqul Islam and Chen, Ping},
   booktitle={2022 The IEEE International Conference on Data Mining (ICDM)},
   year={2022},
   organization={IEEE},
+  pdf = {zhuang2022hf/paper.pdf},
+  slides = {zhuang2022hf/slides.pdf},  
+  code = {https://github.com/Yong-Zhuang/HorizonForcing}
 } 
