--- a/_wins/2021-12-10.md
+++ b/_wins/2021-12-10.md
@@ -7,24 +7,17 @@ tags: formatting images
 categories: sample-posts
 youtubeId: lDi9uFcD7XI
 ---
-<div class="row mt-3">
-    <div class="col-sm mt-3 mt-md-0">
-        {% responsive_image path: assets/img/9.jpg class: "img-fluid rounded z-depth-1" %}
-    </div>
-    <div class="col-sm mt-3 mt-md-0">
-        {% responsive_image path: assets/img/7.jpg class: "img-fluid rounded z-depth-1" %}
+<div class="post">
+    <div class="profile float-right w-50">
+        {% responsive_image path: assets/img/wins/2021-12-10.jpg class: "img-fluid rounded z-depth-1" %}
     </div>
 </div>
-<div class="caption">
-    A simple, elegant caption looks good between image rows, after each row, or doesn't have to be there at all.
-</div>
-
 Our invited guest is Dr. Zhi Cao, an alumna of UMass Boston. She is going to share her journey to becoming a scientist in a leading Tech company.
 
 Dr. Zhi Cao is a Data & Applied Scientist and Software Engineer at Microsoft. She received her PhD in Computer Science from UMass Boston, where she worked with Prof. Honggang Zhang at Mobile and Pervasive Computing Lab. Her research focuses were Edge Computing and Deep Reinforcement Learning. In her research, she tackled problems related to application placement and resource allocation in mobile Edge Computing.
 
 
-{% include youtubePlayer.html id=page.youtubeId %}
+{% include youtube_player.html id=page.youtubeId %}
 
 
 
