update profile image

--- a/_wins/2021-12-10.md
+++ b/_wins/2021-12-10.md
@@ -8,7 +8,7 @@ categories: sample-posts
 youtubeId: lDi9uFcD7XI
 ---
 <div class="post">
-    <div class="profile float-right w-50">
+    <div class="profile float-left w-50">
         {% responsive_image path: assets/img/wins/2021-12-10.jpg class: "img-fluid rounded z-depth-1" %}
     </div>
 </div>
@@ -17,7 +17,7 @@ Our invited guest is Dr. Zhi Cao, an alumna of UMass Boston. She is going to sha
 Dr. Zhi Cao is a Data & Applied Scientist and Software Engineer at Microsoft. She received her PhD in Computer Science from UMass Boston, where she worked with Prof. Honggang Zhang at Mobile and Pervasive Computing Lab. Her research focuses were Edge Computing and Deep Reinforcement Learning. In her research, she tackled problems related to application placement and resource allocation in mobile Edge Computing.
 
 
-{% include youtube_player.html id=page.youtubeId %}
+
 
 
 
